@@ -23,6 +23,7 @@
 
 ESExpResult *func_debug(ESExp *f, int argc, ESExpResult **argv, Context *c);
 
+ESExpResult *func_geometry(ESExp *f, int argc, ESExpResult **argv, Context *c);
 ESExpResult *func_fullscreen(ESExp *f, int argc, ESExpResult **argv, Context *c);
 ESExpResult *func_maximize(ESExp *f, int argc, ESExpResult **argv, Context *c);
 ESExpResult *func_maximize_vertically(ESExp *f, int argc, ESExpResult **argv, Context *c);
